infrastructure/operators/sealed-secrets/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sealed-secrets-allow-api-server-proxy
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: sealed-secrets-controller
      app.kubernetes.io/name: sealed-secrets
  ingress:
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
